--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -36,7 +36,7 @@
 .info {
   width: 100%;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   padding-top: 11px;
   padding-left: 11px;
